// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-vwo-cloud's pageVisit destination action: all fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "vwo_pageView",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
          },
        },
        "isCustomEvent": false,
        "page": Object {
          "testType": "Cr*5Vs3e2@*dYNybfL",
        },
        "url": "Cr*5Vs3e2@*dYNybfL",
        "vwoMeta": Object {
          "metric": Object {},
          "source": "segment.cloud",
        },
      },
      "time": 1683296328940,
    },
    "msgId": "D12C7C233F8E501E86D4E4A550168083-1683296328",
    "sessionId": 1683296328,
    "visId": "D12C7C233F8E501E86D4E4A550168083",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
      },
    },
  },
}
`;

exports[`Testing snapshot for actions-vwo-cloud's pageVisit destination action: required fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "vwo_pageView",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
          },
        },
        "isCustomEvent": false,
        "page": Object {},
        "vwoMeta": Object {
          "metric": Object {},
          "source": "segment.cloud",
        },
      },
      "time": 1683296328884,
    },
    "msgId": "D12C7C233F8E501E86D4E4A550168083-1683296328",
    "sessionId": 1683296328,
    "visId": "D12C7C233F8E501E86D4E4A550168083",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
      },
    },
  },
}
`;
